--- a/pom.xml
+++ b/pom.xml
@@ -6,27 +6,27 @@
 
     <groupId>systems.appollo.misc</groupId>
     <artifactId>service-front</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>service-front-functional</module>
+        <module>service-front-distribution</module>
+    </modules>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>1.17</version>
-        </dependency>
-    </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>systems.appollo.misc</groupId>
+                <artifactId>service-front-functional</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>systems.appollo.misc</groupId>
+                <artifactId>service-front-distribution</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
